# Stilt

./: .gitignore
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/stilt/stoytek/stilt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: slinfo_db.db
app/src/main/cpp/: audio-recorder-jni.c  audio-recorder-jni.h  impulse.c  native-lib.cpp  sigproc.c  sigproc.h
app/src/main/java/com/stilt/stoytek/stilt/: AndroidDatabaseManager.java  Fx.java  InfosideFragment.java  LydbelastningsFragment.java  LydbelastningsView.java  MainActivity.java  PagerAdapter.java  TtsFragment.java  TtsView.java
app/src/main/java/com/stilt/stoytek/stilt/audiorec/: AudioCallback.java  AudioRecorder.java  AudioRecorderWorker.java
app/src/main/java/com/stilt/stoytek/stilt/db/: SoubdlevelInfoDataSource.java  SoundlevelDataSource.java  SoundlevelInfoDataSource.java  SoundlevelInfoSQLiteHelper.java  SoundlevelSQLiteHelper.java
app/src/main/java/com/stilt/stoytek/stilt/dtypes/: SoundlevelInfo.java  SoundlevelMeasurement.java
app/src/main/java/com/stilt/stoytek/stilt/notifications/: Notification.java  NotificationBuilder.java
app/src/main/res/drawable/: button_border.xml  button_style.xml  layout_border.xml  tab_underline.xml
app/src/main/res/layout/: activity_main.xml  infoside.xml  lydbelastningsview.xml  ttsview.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/stilt/stoytek/stilt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
